public/styles.css
* {
  font-family: 'Open Sans Condensed', sans-serif;
  font-weight: lighter;
  color: #B3B0B1 !important;
}

html, body {
  background: #1C1C1D;
}

div.main-wrap {
  width: 100vw;
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  background: transparent;
}

div.content-wrap {
  position: relative;
  width: 100vw;
  height: 100vh;
  max-width: 1024px;
  max-height: 1400px !important;
  padding: 1em 0;
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: #1C1C1D;
  border: solid #323234 5px;
  border-radius: 6px;
  overflow-y: scroll !important;
}

textarea {
  overflow: scroll;
}

div.modal-content {
  background: #FFFFFF;
  border: 0;
  opacity: .95;
}

div.modal-header {
  border: none !important;
}

h5.modal-title {
  text-transform: uppercase;
  color: #1C1C1D !important;
}

.form-control, .form-control:active, .form-control:focus {
  color: #1C1C1D !important;
  background: #F5F5F5;
  outline: none !important;
  border: none !important;
  box-shadow: none !important;
}

h2 {
  position: relative;
  width: inherit;
  max-width: inherit;
  padding: 1em .25em;
  margin-top: 50px;
  display: flex;
  justify-content: center;
  align-items: center;
  color: #E5E5E5 !important;
  background-color: #1C1C1D;
  text-transform: uppercase;
}

h2.home-title {
  margin-top: 0 !important;
}

a.btn {
  display: flex;
  justify-content: center;
  align-items: center;
  background: #323234;
}

a.btn:hover, a.btn:active, button:hover, button:active  {
  background: #525252 !important;
  cursor: pointer !important;
}

b {
  display: block !important;
  text-transform: uppercase;
}

/*USER HOME-------------------------------------------------------------------*/
div.home-c-w {
  padding-bottom: 0 !important;
}

div#callLinksWrap {
  width: 96%;
  min-height: fit-content;
  max-width: 800px;
  margin: 1em 0;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  border-radius: 5px;
}

a.call-btns {
  width: 80%;
  min-height: fit-content;
  margin: .5em;
  border-width: 2px 4px;
  border-radius: 42px;
  -webkit-box-shadow: 0 8px 6px -6px rgba(0,0,0,0.25);
	   -moz-box-shadow: 0 8px 6px -6px rgba(0,0,0,0.25);
	        box-shadow: 0 8px 6px -6px rgba(0,0,0,0.25);
}

div.btn-text {
  flex-grow: 1;
  text-align: center;
}

div.icon {
  width: 50px;
  height: 50px;
  display: flex;
  justify-content: center;
  align-items: center;
  border-width: 2px 4px;
  border-radius: 42px;
  font-weight: bold;
  font-size: 30px;
  opacity: .7;
  color: white !important;
}

div#green {
  background-color: #B1CECC;
}

div#yellow {
  background-color: #E4CE4E;
}

div#red {
  background-color: #400607;
}

div#footer {
  position: relative;
  margin-top: auto;
  bottom: 0;
  width: inherit;
  max-width: 1024px;
  min-height: fit-content;
  background: #323234;
  display: flex;
  flex-flow: wrap column;
}

div#footerLinksWrap {
  position: relative;
  width: inherit;
  max-width: 1024px;
  display: flex;
  border-bottom: 1px solid #1C1C1D;
}

a.info-log-logout {
  flex-grow: 1;
  padding: 2em 0;
  border-radius: 0 !important;
}

div#footerBottomWrap {
  width: 100%;
  max-width: inherit;
  display: flex;
}

/*save for when logo file is recieved.*/
div#footerLogo {
  position: relative;
  display: inline-block;
  color: #B1CECC !important;
  font-weight: bold;
  padding: .5em 1em .5em .5em;
  font-size: .75em;
}

div#footerColor {
  position: relative;
  display: inline-block;
  padding: .5em 1em .5em .5em;
  font-size: .75em;
}

/*USER-INFORMATION------------------------------------------------------------*/
div#infoCard {
  position: relative;
  margin-top: 1em;
  background: #323234;
  width: 98%;
  min-height: fit-content;
}

div.card-header {
  background: transparent;
  border-color: #F1B446 ;
}

div.card-body, ul.list-group, li.list-group-item {
  background: transparent;
}

button#safetyToggleBtn, button#emailToggleBtn, button#addressToggleBtn, button#oppInfoToggleBtn, button#fileToggleBtn, button#addLogToggleBtn, button.details-btns, button.submit-btn {
  border-width: 2px 4px;
  border-radius: 42px;
  background-color: #779B98;
  color: #FFFFFF !important;
  opacity: .9;
  text-transform: uppercase;
}

button#fileToggleBtn {
  margin: none !important;
}

/*USER-LOG--------------------------------------------------------------------*/
div#addLogBtnWrap {
  height: fit-content;
  width: 100vw;
  max-width: 1024px;
  text-align: center;
  padding: 1em 0;
}

button#addLogToggleBtn {
  padding: .5em 1.5em;
}

div#logContainer {
  position: relative;
  width: 100vw;
  max-width: inherit;
  height: inherit;
  max-height: inherit;
  border-radius: 5px;
  background-color: #1C1C1D;
}

div.log-cards {
  margin: 1em 1em;
  min-height: fit-content;
  background: #323234;
}

/*----------------------------------------------------------------------------*/
@media (max-width: 575px) {
  a.info-log-logout {
    font-size: .75em;
  }

  a.call-btns {
    width: 90%;
  }

  div.icon {
    padding: .25em;
    font-size: 35px;
  }

  div#logContainer {
    border: none;
  }

}

@media (max-width: 1000px) {
  div.content-wrap {
    border-radius: 0px;
  }
}

